tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/bookinfo-default-sidecar-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-default-sidecar-2
  namespace: default
spec:
  egress:
    - hosts:
        - "./details.default.svc.cluster.local"
