tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/bookinfo-service-entry-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-first-test
spec:
  hosts:
  - "*.slack.com"
  - www.google.com
  location: MESH_EXTERNAL
  ports:
   - name: https-443
     number: 443
     protocol: HTTPS
  resolution: NONE
