tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/bookinfo-test-sidecar-connectivity-scheme.yaml


networkConfigList:
  - name: mixed-sidecar
    resourceList:
      - bookinfo-topology
      - service_entry_resources/bookinfo-service-entry-1.yaml
      - sidecar-w-internal-external-services.yaml

  - name: mixed-sidecar-registry-only
    resourceList:
      - bookinfo-topology
      - service_entry_resources/bookinfo-service-entry-1.yaml
      - sidecar-w-internal-external-services-registry-only.yaml

  - name: allow-all-sidecar
    resourceList:
      - bookinfo-topology
      - service_entry_resources/external-https-wildcard-services.yaml
      - sidecar-allows-any.yaml

  - name: allow-all-sidecar-multiple-service-entry
    resourceList:
      - bookinfo-topology
      - service_entry_resources/external-https-wildcard-services.yaml
      - service_entry_resources/external-https-services-another-port.yaml
      - sidecar-allows-any.yaml

queries:
  - name: connectivity-internal-external
    connectivityMap:
      - mixed-sidecar
    expectedOutput: ../../../expected_output/connectivity_internal_external_sidecar.txt
    expected: 0

  - name: connectivity-internal-external-registry-only
    connectivityMap:
      - mixed-sidecar-registry-only
    expectedOutput: ../../../expected_output/connectivity_internal_external_sidecar_registry_only.txt
    expected: 0

  - name: connectivity-allow-any
    connectivityMap:
      - allow-all-sidecar
    expectedOutput: ../../../expected_output/connectivity_bookinfo_ratings_allow_any_sidecar.txt
    expected: 0

  - name: connectivity-allow-any-multiple-service-entries
    connectivityMap:
      - allow-all-sidecar-multiple-service-entry
    expectedOutput: ../../../expected_output/connectivity_bookinfo_ratings_allow_any_sidecar_multiple_service_entries.txt
    expected: 0
