tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/containments-w-sidecar-and-service-entry-scheme.yaml
resourceList:
  - bookinfo-topology
  - service_entry_resources/external-https-wildcard-services.yaml

networkConfigList:
  - name: default-sidecar-allows-any
    networkPolicyList:
      - default-sidecar-allow-any.yaml

  - name: sidecar-with-selector-allows-any
    networkPolicyList:
      - sidecar-allows-any.yaml

  - name: sidecar-with-selector-registery-only
    networkPolicyList:
      - sidecar-allows-all-in-registery-only.yaml

  - name: sidecar-with-local-sevices-only
    resourceList:
      - bookinfo-topology
      - service_entry_resources/bookinfo-service-entry-1.yaml
      - sidecar-with-local-services-only.yaml

  - name: sidecar-with-local-and-dns-services
    resourceList:
      - bookinfo-topology
      - service_entry_resources/bookinfo-service-entry-1.yaml
      - sidecar-w-internal-external-services.yaml

queries:
  - name: containment-configs-allow-any
    containment:
      - default-sidecar-allows-any
      - sidecar-with-selector-allows-any
    expected: 1 # default allows any -> contains same conns as the second config

  - name: two-way-containment-configs-allow-any
    twoWayContainment:
      - default-sidecar-allows-any
      - sidecar-with-selector-allows-any
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/two_way_containment_configs_allow_any.txt
    expected: 3 # both contain same conns

  - name: permits-configs-allow-any
    permits:
      - default-sidecar-allows-any
      - sidecar-with-selector-allows-any
    expected: 0 # first config permits the conns in the second config too

  - name: containment-on-configs-with-different-outbound-modes
    containment:
      - sidecar-with-selector-allows-any
      - sidecar-with-selector-registery-only
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/containment_configs_w_sidecars_different_outbound_mode.txt
    expected: 1  # first config contains all conns in the second config

  - name: two-way-containment-on-configs-with-different-outbound-modes
    twoWayContainment:
      - sidecar-with-selector-allows-any
      - sidecar-with-selector-registery-only
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/two_way_containment_configs_w_sidecars_different_outbound_mode.txt
    expected: 1  # first config contains all conns in the second config but the second does not contain all conns of the first config

  - name: permits-on-configs-with-different-outbound-modes
    permits:
      - sidecar-with-selector-allows-any
      - sidecar-with-selector-registery-only
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/permits_configs_w_sidecars_different_outbound_mode.txt
    expected: 0  # first config contains all conns in the second config, so it permits it

  - name: two-way-containment-one-config-with-dns-entry
    twoWayContainment:
      - sidecar-with-local-sevices-only
      - sidecar-with-local-and-dns-services
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/two_way_containment_configs_w_sidecars_different_hosts_types.txt
    expected: 2 # second config contains the conns of the first config but not the opposite
