tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/default-sidecar-allow-any.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sidecar-allow-any-conns
spec:
  egress:
    - hosts:
      - "*/*"
