tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/forbids-and-interferes-with-sidecars-tests-scheme.yaml
resourceList:
  - bookinfo-topology
  - service_entry_resources/bookinfo-service-entry-1.yaml


networkConfigList:
  - name: sidecar-with-local-hosts-only
    networkPolicyList:
      - sidecar-with-local-hosts-only.yaml

  - name: sidecar-with-local-and-dns-hosts
    networkPolicyList:
      - sidecar-w-internal-external-services.yaml

  - name: sidecar-allows-any-one-service-entry
    resourceList:
      - bookinfo-topology
      - service_entry_resources/external-https-wildcard-services.yaml
      - sidecar-allows-any.yaml

  - name: allow-all-sidecar-multiple-service-entry
    resourceList:
      - bookinfo-topology
      - service_entry_resources/external-https-wildcard-services.yaml
      - service_entry_resources/external-https-services-less-hosts-and-different-port.yaml
      - sidecar-allows-any.yaml

queries:
  - name: forbids-on-configs-one-with-dns-entry
    forbids:
      - sidecar-with-local-and-dns-hosts
      - sidecar-with-local-hosts-only
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/forbids_configs_w_sidecars_different_hosts_types.txt
    expected: 1 # first config extends second - connections intersect - no forbid

  - name: interferes-on-configs-one-with-dns-entry
    interferes:
      - sidecar-with-local-hosts-only
      - sidecar-with-local-and-dns-hosts
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/interferes_configs_w_sidecars_different_hosts_types.txt
    expected: 1 # second config extends first one

  - name: pair-wise-interferes-on-configs-one-with-dns-entry
    pairwiseInterferes:
      - sidecar-with-local-and-dns-hosts
      - sidecar-with-local-hosts-only
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/pair_wise_interferes_configs_w_sidecars_different_hosts_types.txt
    expected: 1 # only first config extends second

  # the second config has 2 service entries with some common hosts in both but different ports, we want to check
  # that config2 extends some connections of config1 (which has one service-entry in common)
  - name: interferes-dns-entries-porting
    interferes:
      - sidecar-allows-any-one-service-entry
      - allow-all-sidecar-multiple-service-entry
    outputConfiguration:
      fullExplanation: True
    expectedOutput: ../../../expected_output/interferes_multiple_service_entries_extends_porting.txt
    expected: 1 # second config extends first one
