tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/global-sidecar-permits-test-scheme.yaml
resourceList:
  - ../../../example_podlist/bookinfo_ns_list.json
  - ../../../example_podlist/bookinfo_deployments.yaml
  - ../../../example_podlist/bookinfo_services.yaml

networkConfigList:
  - name: global-sidecar
    networkPolicyList:
      - global-sidecar.yaml

  - name: bookinfo-default-sidecar-1
    networkPolicyList:
      - bookinfo-default-sidecar-1.yaml

queries:
  - name: permits-global-to-default
    permits:
      - global-sidecar
      - bookinfo-default-sidecar-1
    expected: 0
