tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/global-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: global-sidecar
  namespace: istio-config
spec:
  egress:
    - hosts:
      - "*/*"
