tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/sidecar-allows-all-in-registery-only.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-ratings-sidecar-registry-only
spec:
  workloadSelector:
    labels:
      app: ratings
  egress:
    - hosts:
      - "*/*"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
