tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/sidecar-allows-any.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sidecar-allows-any
spec:
  workloadSelector:
    labels:
      app: ratings
  egress:
    - hosts:
        - "*/*"
  outboundTrafficPolicy:
    mode: ALLOW_ANY
