tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/sidecar-w-internal-external-services-registry-only.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-ratings-sidecar-mixed-registry-only
spec:
  workloadSelector:
    labels:
      app: ratings
  egress:
    - hosts:
      - "./details.default.svc.cluster.local"
      - "./reviews.default.svc.cluster.local"
      - "*/www.slack.com"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
