tests/istio_testcases/example_policies/bookinfo-demo/sidecar_examples/sidecar-w-specific-host.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-ratings-sidecar-specific-host
spec:
  workloadSelector:
    labels:
      app: ratings
  egress:
    - hosts:
        - "*/en.wikipedia.org"
